--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,5 +5,16 @@
   "scripts": {},
   "keywords": [],
   "author": "@yantene, @cflatech and @sumogri",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "expose-loader": "^2.0.0",
+    "ts-loader": "^8.0.17",
+    "typescript": "^4.1.5",
+    "webpack": "^5.21.2",
+    "webpack-cli": "^4.5.0",
+    "webpack-dev-server": "^3.11.2"
+  },
+  "dependencies": {
+    "phaser": "^3.52.0"
+  }
 }
