--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,12 +2,19 @@
   "name": "uchiwa",
   "version": "0.1.0",
   "description": "",
-  "scripts": {},
+  "scripts": {
+    "dev": "webpack --mode development && webpack serve --mode development",
+    "build": "webpack --mode production"
+  },
   "keywords": [],
   "author": "@yantene, @cflatech and @sumogri",
   "license": "MIT",
   "devDependencies": {
+    "copy-webpack-plugin": "^7.0.0",
     "expose-loader": "^2.0.0",
+    "html-webpack-plugin": "^5.1.0",
+    "pug": "^3.0.0",
+    "pug-loader": "^2.4.0",
     "ts-loader": "^8.0.17",
     "typescript": "^4.1.5",
     "webpack": "^5.21.2",
