--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "author": "@yantene, @cflatech and @sumogri",
   "license": "MIT",
   "devDependencies": {
+    "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^7.0.0",
     "expose-loader": "^2.0.0",
     "html-webpack-plugin": "^5.1.0",
