--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,16 +5,24 @@
   "scripts": {
     "start": "webpack serve --config webpack.dev.js",
     "dev": "webpack --config webpack.dev.js",
-    "build": "webpack --config webpack.prod.js"
+    "build": "webpack --config webpack.prod.js",
+    "eslint": "eslint 'src/**/*.ts'",
+    "eslint:fix": "eslint --fix 'src/**/*.ts'"
   },
   "keywords": [],
   "author": "@yantene, @cflatech and @sumogri",
   "license": "MIT",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.15.0",
+    "@typescript-eslint/parser": "^4.15.0",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^7.0.0",
+    "eslint": "^7.20.0",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-prettier": "^3.3.1",
     "expose-loader": "^2.0.0",
     "html-webpack-plugin": "^5.1.0",
+    "prettier": "^2.2.1",
     "pug": "^3.0.0",
     "pug-loader": "^2.4.0",
     "ts-loader": "^8.0.17",
