--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -9,6 +9,8 @@
     "esModuleInterop": true,
 
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+
+    "outDir": "./dist"
   }
 }
