--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "dev": "rm -rf dist && set DEBUG=express-typescript:* & tsc-watch --noClear --onSuccess \"node ./bin/www\""
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -18,6 +19,7 @@
     "@types/express": "^4.17.11",
     "@types/http-errors": "^1.8.0",
     "@types/morgan": "^1.9.2",
+    "tsc-watch": "^4.2.9",
     "typescript": "^4.1.5"
   }
 }
