--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,10 @@
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.11",
     "@types/http-errors": "^1.8.0",
+    "@types/jest": "^26.0.20",
     "@types/morgan": "^1.9.2",
+    "jest": "^26.6.3",
+    "ts-jest": "^26.5.1",
     "tsc-watch": "^4.2.9",
     "typescript": "^4.1.5"
   }
