--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,11 @@
     "@types/http-errors": "^1.8.0",
     "@types/jest": "^26.0.20",
     "@types/morgan": "^1.9.2",
+    "@typescript-eslint/eslint-plugin": "^4.15.2",
+    "@typescript-eslint/parser": "^4.15.2",
+    "eslint": "^7.20.0",
+    "eslint-config-prettier": "^8.0.0",
+    "eslint-plugin-jest": "^24.1.5",
     "jest": "^26.6.3",
     "ts-jest": "^26.5.1",
     "tsc-watch": "^4.2.9",
