--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "start": "node ./bin/www",
     "dev": "rm -rf dist && set DEBUG=express-typescript:* & tsc-watch --noClear --onSuccess \"node ./bin/www\"",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint './**/*.ts'",
+    "lint:fix": "eslint --fix './**/*.ts'"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
