--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
     "dev": "rm -rf dist && set DEBUG=express-typescript:* & tsc-watch --noClear --onSuccess \"node ./bin/www\"",
     "test": "jest",
     "lint": "eslint './**/*.ts'",
-    "lint:fix": "eslint --fix './**/*.ts'"
+    "lint:fix": "eslint --fix './**/*.ts' && prettier --write './**/*.ts'"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -29,6 +29,7 @@
     "eslint-config-prettier": "^8.0.0",
     "eslint-plugin-jest": "^24.1.5",
     "jest": "^26.6.3",
+    "prettier": "^2.2.1",
     "ts-jest": "^26.5.1",
     "tsc-watch": "^4.2.9",
     "typescript": "^4.1.5"
