[fix] package.json scripts最後のカンマ削除

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "dev": "webpack --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
     "eslint": "eslint \"src/**/*.ts\"",
-    "eslint:fix": "eslint --fix \"src/**/*.ts\"",
+    "eslint:fix": "eslint --fix \"src/**/*.ts\""
   },
   "keywords": [],
   "author": "@yantene, @cflatech and @sumogri",
