--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -2,8 +2,9 @@
 root: true
 
 env:
-  es2020: true
+  es6: true
   node: true
+  browser: true
   jest/globals: true
 
 parser: "@typescript-eslint/parser"
