--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
   "name": "uchiwa",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "private": true,
+  "keywords": [],
+  "author": "@yantene, @cflatech and @sumogri",
+  "license": "MIT",
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "rm -rf dist && set DEBUG=express-typescript:* & tsc-watch --noClear --onSuccess \"node ./bin/www\"",
+    "front:dev": "webpack --config webpack.dev.js",
+    "front:build": "webpack --config webpack.prod.js",
+    "back:dev": "rm -rf dist && set DEBUG=express-typescript:* & tsc-watch --noClear --onSuccess \"node ./bin/www\"",
+    "back:build": "tsc",
     "test": "jest",
     "lint": "eslint './**/*.ts'",
     "lint:fix": "eslint --fix './**/*.ts' && prettier --write './**/*.ts'"
@@ -15,7 +21,7 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
-    "pug": "2.0.0-beta11"
+    "phaser": "^3.52.0"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.2",
@@ -25,13 +31,24 @@
     "@types/morgan": "^1.9.2",
     "@typescript-eslint/eslint-plugin": "^4.15.2",
     "@typescript-eslint/parser": "^4.15.2",
+    "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^7.0.0",
     "eslint": "^7.20.0",
     "eslint-config-prettier": "^8.0.0",
     "eslint-plugin-jest": "^24.1.5",
+    "expose-loader": "^2.0.0",
+    "html-webpack-plugin": "^5.1.0",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
+    "pug": "^3.0.0",
+    "pug-loader": "^2.4.0",
     "ts-jest": "^26.5.1",
+    "ts-loader": "^8.0.17",
     "tsc-watch": "^4.2.9",
-    "typescript": "^4.1.5"
+    "typescript": "^4.1.5",
+    "webpack": "^5.21.2",
+    "webpack-cli": "^4.5.0",
+    "webpack-dev-server": "^3.11.2",
+    "webpack-merge": "^5.7.3"
   }
 }
