--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     }
   ],
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "node ./dist/server.js",
     "build": "run-p build:*",
     "build:frontend": "npm run --prefix frontend build",
     "build:backend": "tsc --build ./tsconfig.json",
     "dev": "run-p dev:*",
     "dev:frontend": "npm run --prefix frontend dev:watch",
-    "dev:backend": "rm -rf ./dist/app && set DEBUG=express-typescript:* & tsc-watch --build ./tsconfig.json --noClear --onSuccess \"npm start\"",
+    "dev:backend": "rm -rf ./dist/app ./dist/server.js && set DEBUG=express-typescript:* & tsc-watch --build ./tsconfig.json --noClear --onSuccess \"npm start\"",
     "lint": "run-s lint:*",
     "lint:frontend": "npm run --prefix frontend lint",
     "lint:backend": "eslint --config ./.eslintrc.yaml \"./**/*.ts\"",
@@ -43,6 +43,7 @@
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.2",
+    "@types/debug": "^4.1.5",
     "@types/express": "^4.17.11",
     "@types/http-errors": "^1.8.0",
     "@types/jest": "^26.0.20",
