--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "mini-css-extract-plugin": "^1.3.9",
     "morgan": "~1.9.1",
     "phaser": "^3.52.0"
   },
@@ -52,6 +53,7 @@
     "@typescript-eslint/parser": "^4.15.2",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^7.0.0",
+    "css-loader": "^5.1.0",
     "eslint": "^7.20.0",
     "eslint-config-prettier": "^8.0.0",
     "eslint-plugin-jest": "^24.1.5",
@@ -62,6 +64,8 @@
     "prettier": "^2.2.1",
     "pug": "^3.0.0",
     "pug-loader": "^2.4.0",
+    "sass": "^1.32.8",
+    "sass-loader": "^11.0.1",
     "ts-jest": "^26.5.1",
     "ts-loader": "^8.0.17",
     "tsc-watch": "^4.2.9",
