incremental build のせいで正しく動かなかったのを修正

--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
   ],
   "scripts": {
     "start": "node ./dist/server.js",
-    "build": "run-p build:*",
+    "build": "run-p build:frontend build:backend",
     "build:frontend": "npm run --prefix frontend build",
-    "build:backend": "tsc --build ./tsconfig.json",
-    "dev": "run-p dev:*",
+    "build:backend": "tsc",
+    "dev": "run-p dev:frontend dev:backend",
     "dev:frontend": "npm run --prefix frontend dev:watch",
-    "dev:backend": "rm -rf ./dist/app ./dist/server.js && set DEBUG=express-typescript:* & tsc-watch --build ./tsconfig.json --noClear --onSuccess \"npm start\"",
-    "lint": "run-s lint:*",
+    "dev:backend": "run-s dev:backend:clean dev:backend:watch",
+    "dev:backend:clean": "rm -rf ./dist/app ./dist/server.js ./dist/tsconfig.tsbuildinfo",
+    "dev:backend:watch": "set DEBUG=express-typescript:* & tsc-watch --noClear --onSuccess \"npm start\"",
+    "lint": "run-s lint:frontend lint:backend",
     "lint:frontend": "npm run --prefix frontend lint",
     "lint:backend": "eslint --config ./.eslintrc.yaml \"./**/*.ts\"",
     "format": "run-p format:frontend format:backend",
