--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,5 +22,35 @@
     "format:eslint": "eslint --config ./.eslintrc.yaml --fix \"./**/*.ts\"",
     "format:prettier": "prettier --write \"./**/*.ts\"",
     "test": "jest --config ./jest.config.js"
+  },
+  "dependencies": {
+    "phaser": "^3.52.0"
+  },
+  "devDependencies": {
+    "@types/jest": "^26.0.20",
+    "@typescript-eslint/eslint-plugin": "^4.15.2",
+    "@typescript-eslint/parser": "^4.15.2",
+    "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^7.0.0",
+    "css-loader": "^5.1.0",
+    "eslint": "^7.20.0",
+    "eslint-config-prettier": "^8.0.0",
+    "eslint-plugin-jest": "^24.1.5",
+    "expose-loader": "^2.0.0",
+    "html-webpack-plugin": "^5.1.0",
+    "jest": "^26.6.3",
+    "mini-css-extract-plugin": "^1.3.9",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^2.2.1",
+    "pug": "^3.0.0",
+    "pug-loader": "^2.4.0",
+    "sass": "^1.32.8",
+    "sass-loader": "^11.0.1",
+    "ts-jest": "^26.5.1",
+    "ts-loader": "^8.0.17",
+    "typescript": "^4.1.5",
+    "webpack": "^5.21.2",
+    "webpack-cli": "^4.5.0",
+    "webpack-merge": "^5.7.3"
   }
 }
