--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
   ],
   "scripts": {
     "start": "node ./dist/server.js",
+    "clean": "run-p clean:*",
+    "clean:frontend": "rimraf ./dist/public",
+    "clean:backend": "rimraf ./dist/app ./dist/server.js ./dist/tsconfig.tsbuildinfo",
     "build": "run-p build:frontend build:backend",
     "build:frontend": "npm run --prefix frontend build",
     "build:backend": "tsc",
     "dev": "run-p dev:frontend dev:backend",
     "dev:frontend": "npm run --prefix frontend dev:watch",
-    "dev:backend": "run-s dev:backend:clean dev:backend:watch",
-    "dev:backend:clean": "rm -rf ./dist/app ./dist/server.js ./dist/tsconfig.tsbuildinfo",
+    "dev:backend": "run-s clean:backend dev:backend:watch",
     "dev:backend:watch": "set DEBUG=express-typescript:* & tsc-watch --noClear --onSuccess \"npm start\"",
     "lint": "run-s lint:frontend lint:backend",
     "lint:frontend": "npm run --prefix frontend lint",
@@ -40,9 +42,7 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
-    "mini-css-extract-plugin": "^1.3.9",
-    "morgan": "~1.9.1",
-    "phaser": "^3.52.0"
+    "morgan": "~1.9.1"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.2",
@@ -53,27 +53,15 @@
     "@types/morgan": "^1.9.2",
     "@typescript-eslint/eslint-plugin": "^4.15.2",
     "@typescript-eslint/parser": "^4.15.2",
-    "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^7.0.0",
-    "css-loader": "^5.1.0",
     "eslint": "^7.20.0",
     "eslint-config-prettier": "^8.0.0",
     "eslint-plugin-jest": "^24.1.5",
-    "expose-loader": "^2.0.0",
-    "html-webpack-plugin": "^5.1.0",
     "jest": "^26.6.3",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.2.1",
-    "pug": "^3.0.0",
-    "pug-loader": "^2.4.0",
-    "sass": "^1.32.8",
-    "sass-loader": "^11.0.1",
+    "rimraf": "^3.0.2",
     "ts-jest": "^26.5.1",
-    "ts-loader": "^8.0.17",
     "tsc-watch": "^4.2.9",
-    "typescript": "^4.1.5",
-    "webpack": "^5.21.2",
-    "webpack-cli": "^4.5.0",
-    "webpack-merge": "^5.7.3"
+    "typescript": "^4.1.5"
   }
 }
