--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.9"
 services:
   siggre:
-    image: yantene/siggre-dev
+    image: yantene/siggre
     build:
       context: .
       dockerfile: ./Dockerfile
