--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -5,7 +5,7 @@
     "module": "commonjs",
     "moduleResolution": "node",
 
-    "strict": false,
+    "strict": true,
 
     "esModuleInterop": true,
 
