--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: "3.9"
 services:
-  siggre:
-    image: yantene/siggre
+  hinano:
+    image: yantene/hinano
     build:
       context: .
       dockerfile: ./Dockerfile
