--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,6 +41,8 @@
     "jest": "^26.6.3",
     "mini-css-extract-plugin": "^1.3.9",
     "npm-run-all": "^4.1.5",
+    "phaser3-rex-plugins": "^1.1.41",
+    "phaser3-rex-plugins-types": "^0.1.0",
     "prettier": "^2.2.1",
     "pug": "^3.0.0",
     "pug-loader": "^2.4.0",
